# litmus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: litmus.yml  release.yml
docs/: alpha-compatibility.md  alpha-quickstart.md  package-readme.md
docs/agents/: README.md
docs/plans/: 2026-03-29-litmus-design.md  2026-03-29-litmus-engineering-plan.md  2026-04-03-ws-15-cross-layer-dst-design.md  2026-04-03-ws-15-cross-layer-dst-implementation-plan.md  2026-04-04-ws-16-exact-deterministic-replay-fidelity-design.md  2026-04-04-ws-16-exact-deterministic-replay-fidelity-implementation-plan.md  2026-04-05-litmus-next-phase-action-items.md  2026-04-06-a5-suggested-invariant-review-workflow-implementation-plan.md  2026-04-07-a6-performance-slo-hardening-implementation-plan.md  2026-04-07-b2-scheduler-ledger-slice-1-implementation-plan.md  2026-04-07-b2-scheduler-level-deterministic-replay-design.md  2026-04-07-b2-scheduler-replay-completion-plan.md  2026-04-07-b3-search-budget-design.md  2026-04-07-b3-search-budget-slice-1-implementation-plan.md  2026-04-08-ai-engineering-confidence-platform-design.md  2026-04-08-ai-engineering-confidence-platform-implementation-plan.md  2026-04-08-b4-supported-stack-fidelity-design.md  2026-04-08-b4-supported-stack-fidelity-slice-1-implementation-plan.md  2026-04-08-b4-supported-stack-fidelity-slice-2-design.md  2026-04-08-b4-supported-stack-fidelity-slice-2-implementation-plan.md  2026-04-08-b4-supported-stack-fidelity-slice-3-design.md  (+12 more)
product/: STATUS.md  litmus-product-spec.md
(+151 files in other folders)
