[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "litmus-cli"
version = "0.1.0"
description = "Deterministic fault-injection verification for agent-written code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16.0,<1.0.0",
]

[project.scripts]
litmus = "litmus.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litmus"]
