[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "litmus-cli"
description = "Deterministic fault-injection verification for agent-written code."
readme = "docs/package-readme.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "aiohttp>=3.12.0,<4.0.0",
  "anyio>=4.10.0,<5.0.0",
  "hypothesis>=6.135.0,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mcp>=1.26.0,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "typer>=0.16.0,<1.0.0",
  "watchfiles>=1.1.0,<2.0.0",
]

[project.scripts]
litmus = "litmus.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litmus"]

[tool.hatch.version]
path = "src/litmus/__init__.py"
